ul etiketi öğreniyorum

--- a/index.html
+++ b/index.html
@@ -28,5 +28,19 @@
     <p>H<sub>2</sub>O</p>
     <p>H<sup>2</sup>O</p>
     <hr>
+    <ul>
+        <li>FUAT</li>
+            <ul>
+                <li>PYHTON</li>
+                    <ul>
+                        <li>django</li>
+                    </ul>
+                <li>HTML</li>
+                <li>CSS</li>
+            </ul>
+        <li>İBRAHİM</li>
+        <li>NAZLICAN</li>
+    </ul>
+    <hr>
 </body>
 </html>
