--- a/index.html
+++ b/index.html
@@ -23,11 +23,13 @@
     <br><br><hr><br><br>
     <p>Lorem <u>ipsum dolor</u> sit amet <del>consectetur</del> adipisicing elit. Porro, molestiae.</p>
     <hr>
+    <!-- markalama etiketkini öğrendim  -->
     <p>Lorem ipsum dolor sit amet <mark style="color: red;">consectetur adipisicing elit</mark> . Vitae impedit optio molestiae quam iure illo dolore ab ad vel itaque.</p>
     <hr>
     <p>H<sub>2</sub>O</p>
     <p>H<sup>2</sup>O</p>
     <hr>
+    <!-- düzensiz liste etiketini öğreniyorum -->
     <ul>
         <li>FUAT</li>
             <ul>
@@ -42,5 +44,21 @@
         <li>NAZLICAN</li>
     </ul>
     <hr>
+    <!-- düzenli listeye başlandı -->
+    <ol>
+        <li>ankara</li>
+        <li>samsun</li>
+        <li>adana</li>
+        <li>mardin</li>
+        <li>yozgat</li>
+        <li>adıyaman</li>
+    </ol>
+        <!-- düzenli liste bitti -->
+        <dl>
+            <dt>ibrahim</dt>
+            <dd>full stack</dd>
+            <dt>fuat</dt>
+            <dd>django</dd>
+        </dl>
 </body>
 </html>
