--- a/index.html
+++ b/index.html
@@ -54,11 +54,13 @@
         <li>adıyaman</li>
     </ol>
         <!-- düzenli liste bitti -->
+        <!-- dl discription list etiketi başladı -->
         <dl>
             <dt>ibrahim</dt>
             <dd>full stack</dd>
             <dt>fuat</dt>
             <dd>django</dd>
         </dl>
+        <!-- dl discription list etiketi bitti -->
 </body>
 </html>
